# compiler-visualization

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  test.sh  ubuntu.sh
modules/: FindCorrade.cmake
src/: AST.h  CMakeLists.txt  Data.cpp  Data.h  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  StreamOverloads.cpp  ThreadSync.cpp  ThreadSync.h  Types.h  love2dShaders.h  main.cpp
src/compiler/: AST.h  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  StreamOverloads.cpp  Types.cpp  Types.h
src/visuals/: Application.cpp  Application.h  Checklist.cpp  Checklist.h  FloatingHighlight.cpp  FloatingHighlight.h  HighlightableText.cpp  HighlightableText.h  ScrollManager.h  SourceCodePro-regular.ttf.h  Table.cpp  Table.h  TokenStream.cpp  TokenStream.h  Tree.cpp  Tree.h  Tween.cpp  Tween.h  VisualMain.cpp  VisualMain.h  love2dHelper.cpp  love2dHelper.h
test/: 001_basic.txt  002_comments.txt  003_syntax.txt  004_gen.txt
ubuntu_data/: build.sh
